--- a/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
+++ b/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="179"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="179"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="178"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SAT 4/21" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WzO-lh-Kmn">
@@ -29,10 +29,10 @@
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                 <integer key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="24"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
@@ -90,7 +90,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="246" verticalHuggingPriority="251" text="8:00 - 12:00 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jrd-4f-Lsw">
-                        <rect key="frame" x="91" y="82" width="174.5" height="21"/>
+                        <rect key="frame" x="91" y="82" width="98.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="duO-ej-7Q0"/>
                         </constraints>
@@ -122,13 +122,6 @@
                             <constraint firstAttribute="height" constant="15" id="s7X-SG-Szm"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="ic_peso_black" translatesAutoresizingMaskIntoConstraints="NO" id="U0d-1E-Xnv">
-                        <rect key="frame" x="273.5" y="85" width="15" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="15" id="Fjc-ut-ocu"/>
-                            <constraint firstAttribute="height" constant="15" id="zoH-QJ-AJ6"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t2A-mi-Y5j">
                         <rect key="frame" x="270" y="29" width="42" height="21"/>
                         <constraints>
@@ -136,15 +129,6 @@
                             <constraint firstAttribute="width" constant="42" id="BSO-wW-Thu"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="70" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utu-LY-YxO">
-                        <rect key="frame" x="296.5" y="82" width="15.5" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="DPI-bK-Xrf"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -215,11 +199,26 @@
                             <constraint firstAttribute="bottomMargin" secondItem="us0-6X-ELj" secondAttribute="bottom" id="zkc-Mw-9eB"/>
                         </constraints>
                     </view>
+                    <imageView userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="ic_peso_black" translatesAutoresizingMaskIntoConstraints="NO" id="U0d-1E-Xnv">
+                        <rect key="frame" x="215" y="85" width="15" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="FL0-g1-DYl"/>
+                            <constraint firstAttribute="width" constant="15" id="geE-zF-Fts"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="70" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utu-LY-YxO">
+                        <rect key="frame" x="235" y="82" width="15.5" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="whw-ze-FpO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="top" secondItem="25b-eT-lad" secondAttribute="bottom" id="4QR-3A-HbF"/>
-                    <constraint firstItem="YKM-yO-hKc" firstAttribute="trailing" secondItem="utu-LY-YxO" secondAttribute="trailing" id="5eZ-vM-vVQ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="25b-eT-lad" secondAttribute="trailing" constant="40" id="5h7-qc-BfB"/>
                     <constraint firstItem="t2A-mi-Y5j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="9OH-kD-nCH"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="leading" secondItem="Owa-kH-RWq" secondAttribute="trailing" constant="4" id="BBR-6o-clA"/>
@@ -229,27 +228,26 @@
                     <constraint firstItem="jrd-4f-Lsw" firstAttribute="leading" secondItem="sKP-XI-dXB" secondAttribute="trailing" constant="4" id="ONo-g3-qqd"/>
                     <constraint firstItem="us0-6X-ELj" firstAttribute="leading" secondItem="Owa-kH-RWq" secondAttribute="leading" id="PDb-44-9ln"/>
                     <constraint firstAttribute="bottomMargin" secondItem="jrd-4f-Lsw" secondAttribute="bottom" priority="750" constant="30" id="PEx-43-FUN"/>
-                    <constraint firstItem="U0d-1E-Xnv" firstAttribute="leading" secondItem="jrd-4f-Lsw" secondAttribute="trailing" constant="8" id="Q0L-fv-Qqc"/>
                     <constraint firstItem="Ou6-UR-P4t" firstAttribute="leading" secondItem="5jd-YX-Uyz" secondAttribute="leading" id="Q1H-wL-4s7"/>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="trailing" secondItem="25b-eT-lad" secondAttribute="trailing" id="QGd-js-Emw"/>
                     <constraint firstAttribute="trailingMargin" secondItem="BWK-mm-eRT" secondAttribute="trailing" constant="-8" id="SVN-3c-fBz"/>
-                    <constraint firstItem="utu-LY-YxO" firstAttribute="leading" secondItem="U0d-1E-Xnv" secondAttribute="trailing" constant="8" id="XNV-T6-MvR"/>
-                    <constraint firstItem="U0d-1E-Xnv" firstAttribute="top" secondItem="jrd-4f-Lsw" secondAttribute="top" constant="3" id="ZFb-iM-YLu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="t2A-mi-Y5j" secondAttribute="trailing" id="aRi-4l-Exi"/>
                     <constraint firstAttribute="leadingMargin" secondItem="WzO-lh-Kmn" secondAttribute="leading" id="bCS-MI-tgM"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="utu-LY-YxO" secondAttribute="trailing" id="bpy-Wo-gFt"/>
                     <constraint firstItem="sKP-XI-dXB" firstAttribute="leading" secondItem="Ou6-UR-P4t" secondAttribute="leading" id="clh-3W-Xfb"/>
+                    <constraint firstItem="utu-LY-YxO" firstAttribute="top" secondItem="MRH-Re-13y" secondAttribute="bottom" id="cna-ex-KZg"/>
                     <constraint firstItem="MRH-Re-13y" firstAttribute="top" secondItem="Ou6-UR-P4t" secondAttribute="top" constant="-3" id="dgo-Ec-KxV"/>
                     <constraint firstItem="jrd-4f-Lsw" firstAttribute="top" secondItem="sKP-XI-dXB" secondAttribute="top" constant="-3" id="eYJ-Mm-dFP"/>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="leading" secondItem="25b-eT-lad" secondAttribute="leading" id="fhz-w2-bAs"/>
                     <constraint firstItem="Ou6-UR-P4t" firstAttribute="top" secondItem="5jd-YX-Uyz" secondAttribute="bottom" constant="6" id="gpa-us-0hp"/>
-                    <constraint firstItem="utu-LY-YxO" firstAttribute="top" secondItem="U0d-1E-Xnv" secondAttribute="top" constant="-3" id="gzj-a8-csY"/>
                     <constraint firstItem="Owa-kH-RWq" firstAttribute="leading" secondItem="sKP-XI-dXB" secondAttribute="leading" id="hKK-69-hTD"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="top" secondItem="jrd-4f-Lsw" secondAttribute="bottom" id="ind-FK-pcW"/>
                     <constraint firstItem="WzO-lh-Kmn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="iuc-HX-Uyn"/>
                     <constraint firstAttribute="bottomMargin" secondItem="BWK-mm-eRT" secondAttribute="bottom" constant="-8" id="oNg-dj-5O0"/>
                     <constraint firstItem="Owa-kH-RWq" firstAttribute="top" secondItem="sKP-XI-dXB" secondAttribute="bottom" constant="6" id="pPg-Sg-Cg8"/>
                     <constraint firstItem="MRH-Re-13y" firstAttribute="leading" secondItem="Ou6-UR-P4t" secondAttribute="trailing" constant="4" id="r90-v8-1Zv"/>
+                    <constraint firstItem="U0d-1E-Xnv" firstAttribute="top" secondItem="MRH-Re-13y" secondAttribute="bottom" constant="3" id="ryk-mp-nO8"/>
+                    <constraint firstItem="U0d-1E-Xnv" firstAttribute="leading" secondItem="jrd-4f-Lsw" secondAttribute="trailing" constant="25.5" id="vtH-8m-brw"/>
+                    <constraint firstItem="utu-LY-YxO" firstAttribute="leading" secondItem="U0d-1E-Xnv" secondAttribute="trailing" constant="5" id="xdQ-h5-Daj"/>
                     <constraint firstItem="BWK-mm-eRT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="yJm-zc-LDp"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="top" secondItem="Owa-kH-RWq" secondAttribute="top" constant="-3" id="yhD-Yx-fkT"/>
                     <constraint firstAttribute="trailingMargin" secondItem="MRH-Re-13y" secondAttribute="trailing" id="zsJ-Si-tJC"/>
